TEST_PROGRAMS/INVALID/03/invalid_vardecl_10.go
package main
func f(){
	var x = 10;
	y := x
	type person struct{
		first, last string
		age, height int }
	var z []person;
	var w [20]person;
	var daniel.shoes = "White"; // invalid

	return "Damn Daniel..."
}

